--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,10 +4,6 @@ body {
 
 }
 
-#logo {
-    height: 100%;
-    width: auto;
-}
 
 #topbar {
     height: 10em;
@@ -22,6 +18,19 @@ body {
 
 }
 
+
+#logo {
+    height: 100%;
+    width: auto;
+}
+
+#topbar h1 {
+    display: inline;
+    padding: 10px;
+    font-weight: 500;
+    /*color: #8B9BBC;*/
+}
+
 nav {
     width: 100%;
     background-color: #CA1F29;
@@ -31,7 +40,7 @@ nav {
 }
 
 nav li {
-    float: left;
+    display: inline-block
 }
 
 nav a {
@@ -49,11 +58,25 @@ nav a:hover {
 
 }
 
-
-
 nav ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    overflow: hidden;
+}
+
+
+.formulaire {
+    display: flex;
+    width: 100%;
+}
+
+.colonne {
+    padding: 0.5em;
+    flex: 50%;
+}
+
+@media screen and (max-width: 600px) {
+    .column {
+        width: 100%;
+    }
 }
