--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,3 +94,13 @@ footer a {
     color: #CA1F29;
     text-decoration: none;
 }
+
+input[type=text] {
+    border: none;
+    border-bottom: 2px solid red;
+}
+#grade {
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
+}
