--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -143,8 +143,14 @@ input[type=text] {
     border: none;
     border-bottom: 2px solid red;
 }
+
 #grade {
     border-radius: 5px;
     background-color: #f2f2f2;
     padding: 20px;
+}
+
+label {
+    display: inline-block;
+    margin-bottom: 8px;
 }
