--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,6 @@
 body {
     margin: 0;
     font-family: 'Overpass', sans-serif;
-
 }
 
 
@@ -15,20 +14,35 @@ body {
     background-position-x: right;
     background-position-y: 20%;
     padding: 10px;
-
 }
-
 
 #logo {
     height: 100%;
     width: auto;
 }
 
-#topbar h1 {
+h1 {
     display: inline;
     padding: 10px;
     font-weight: 500;
     /*color: #8B9BBC;*/
+}
+
+h2 {
+    font-weight: 200;
+}
+
+h3 {
+    font-weight: 900;
+    margin-bottom: 0.4em;
+    margin-top: 0.4em;
+}
+
+h4 {
+    margin-bottom: 0.4em;
+    margin-top: 0.4em;
+    color: #CA1F29;
+    font-weight: lighter;
 }
 
 nav {
@@ -49,12 +63,18 @@ nav a {
     display: inline-block;
     padding: 0.5em;
     font-size: 1.5em;
+    transition: .3s;
+
 }
 
 nav a:hover {
     /*background-color: rgb(88, 16, 21);*/
     background-color: #eee0e0 !important;
     color: #000;
+    size: 2;
+    transition: .3s;
+    transform: scale(1.1);
+
 
 }
 
@@ -77,7 +97,11 @@ nav ul {
 
 @media screen and (max-width: 600px) {
     .colonne {
-        width: 100%;
+        width: 97%;
+    }
+
+    .formulaire {
+        display: inline;
     }
 }
 
@@ -96,16 +120,15 @@ footer a {
 }
 
 .formations {
-    /*border-radius: 10px;*/
+    border-radius: 10px;
     padding: 0.5em;
-    margin-bottom: 0.5em;
+    margin-bottom: 1.5em;
     border-left: 6px solid gray;
     background-color: lightgray;
 
 }
 
 #gestion {
-    /*background-color: orange;*/
     border-left: 6px solid #F69D25;
     background-color: #ffe7c7;
 
@@ -121,36 +144,35 @@ footer a {
     background-color: #bce8f7;
 }
 
-#continue {
-    border-left: 6px solid lightcoral;
-    background-color: #f7c3c3;
-}
-
-h3 {
-    font-weight: 900;
-    margin-bottom: 0.4em;
-    margin-top: 0.4em;
-}
-
-h4 {
-    margin-bottom: 0.4em;
-    margin-top: 0.4em;
-    color: #CA1F29;
-    font-weight: lighter;
-}
 
 input[type=text] {
-    border: none;
-    border-bottom: 2px solid red;
+    /*border: none;
+    border-left: 2px solid red;
+    background-color: lightpink;
+    width: max-content;*/
+
+    width: 100%;
+    border: 2px solid #E0E2EE;
+    border-radius: 4px;
+    margin-bottom: 3px;
+    outline: none;
+    padding: 6px;
+    box-sizing: border-box;
+    transition: .3s;
+}
+
+input[type=text]:focus {
+    border-color: #CA1F29;
 }
 
 #grade {
     border-radius: 5px;
     background-color: #f2f2f2;
-    padding: 20px;
+    /*padding: 20px;*/
 }
 
 label {
     display: inline-block;
-    margin-bottom: 8px;
+    margin-top: 1em;
+    margin-bottom: 0.2em;
 }
