--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@ body {
 }
 
 #topbar {
-    height: 10em;
+    height: fit-content;
     background: linear-gradient(270deg, rgba(255, 255, 255, 0) 0%, white 84.7%), url("../../assets/images/adult.jpg") center center;
     backdrop-filter: blur(10px);
     background-size: 100%;
@@ -16,6 +16,7 @@ body {
 }
 
 #logo {
+    max-height: 10em;
     height: 100%;
     width: auto;
 }
@@ -26,6 +27,24 @@ h1 {
     font-weight: 500;
     /*color: #8B9BBC;*/
 }
+
+@media screen and (max-width: 600px) {
+    h1 {
+        font-size: 1.5em;
+    }
+
+    #logo {
+        max-height: 1.5em;
+        height: 100%;
+        width: auto;
+    }
+
+    #topbar {
+        min-height: fit-content;
+        background: white;
+    }
+}
+
 
 h2 {
     font-weight: 200;
@@ -49,6 +68,12 @@ nav {
     background-color: #CA1F29;
     color: white;
     float: left;
+
+    -webkit-box-shadow: 0px 13px 49px 0px rgba(0, 0, 0, 0.16);
+    -moz-box-shadow: 0px 13px 49px 0px rgba(0, 0, 0, 0.16);
+    box-shadow: 0px 13px 49px 0px rgba(0, 0, 0, 0.16);
+
+    margin-bottom: 5px;
 
 }
 
@@ -122,13 +147,13 @@ footer a {
     margin-bottom: 1.5em;
     border-left: 6px solid gray;
     background-color: lightgray;
-    transition: .7s;
+    transition: .2s;
 
 
 }
 
 .formations:hover {
-    transition: .7s;
+    transition: .2s;
     -webkit-box-shadow: 0px 13px 25px 3px rgba(0, 0, 0, 0.20);
     -moz-box-shadow: 0px 13px 25px 3px rgba(0, 0, 0, 0.20);
     box-shadow: 0px 13px 25px 3px rgba(0, 0, 0, 0.20);
@@ -170,14 +195,14 @@ input[type=email] {
     outline: none;
     padding: 6px;
     box-sizing: border-box;
-    transition: .3s;
+    transition: .1s;
 }
 
 input[type=text]:invalid,
 input[type=tel]:invalid,
 input[type=email]:invalid {
     box-shadow: none;
-    background-color: salmon;
+    background-color: #efbbbe;
 }
 
 input[type=text]:focus,
