--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,8 +105,12 @@ nav a:hover {
     transform: scale(1.1);
 }
 
-nav ul {
+ul {
     list-style-type: none;
+
+}
+
+nav ul {
     margin: 0;
     padding: 0;
 }
